# deadbolt

./: .gitignore  CHANGELOG.md  GPG_PUBLIC_KEY.asc  README.md  SECURITY.md  l10n.yaml  pubspec.yaml
.github/workflows/: build.yml  ci.yml  release.yml
android/app/: build.gradle.kts
assets/icon/: README.md
docs/: GPG_SETUP.md  VERIFY_RELEASES.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: errors.dart  main.dart
lib/cubit/: project_detail_cubit.dart  project_list_cubit.dart  settings_cubit.dart
lib/data/: database.dart  database.g.dart  tables.dart
lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
lib/models/: project_export.dart  timelock_types.dart
lib/screens/: about_screen.dart  create_project_dialog.dart  project_detail_screen.dart  project_list_screen.dart  qr_scanner_screen.dart  settings_screen.dart
lib/theme/: app_theme.dart
lib/utils/: bitcoin_formatter.dart  enum_formatters.dart  export_sheet.dart  qr_decoder.dart  toast_helper.dart
lib/widgets/: edit_name_dialog.dart  editable_key_card.dart  editable_path_card.dart  key_card.dart  (+3 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: analyzer.rs  model.rs
rust/src/core/: descriptor.rs  descriptor_builder.rs  descriptor_parser.rs  error.rs  mod.rs  pubkey.rs  spend_path.rs  wallet.rs
rust_builder/: pubspec.yaml
scripts/: sign-checksums.sh  verify-release.sh
test/: utils_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+26 files in other folders)
